# stellarflow-backend

./: .env.example  DELIVERY_SUMMARY.md  LOCKFREE_QUEUE_IMPLEMENTATION.md  SECURE_MEMORY_ARCHITECTURE.md  SECURE_MEMORY_DEVELOPER_GUIDE.md  SECURE_MEMORY_IMPLEMENTATION.md  SECURE_MEMORY_INDEX.md  SECURE_MEMORY_QUICK_REFERENCE.md  SECURITY_CHECKLIST.md  package-lock.json  tsconfig.json
contracts/: Cargo.toml
contracts/src/: auth.rs  models.rs
logs/: .553c12614855ca5166d309d3cfe86444e6cd2003-audit.json  .acd5417bf5748cb617cf4177205a3e81e8513de8-audit.json
prisma/: schema.prisma
proto/: stellarflow_channels.proto
scripts/: benchmark-lockfree-queue.ts
src/: app.ts  index.ts
src/analytics/: __init__.py  latency.py  math_scaler.py  metrics.py  window.py
src/config/: configWatcher.ts  env.ts  loader.py  logger.ts
src/controllers/: adminController.ts  analyticsController.ts  systemControlController.ts
src/crypto/: engine.py  signer.py
src/database/: batch_sink.py  connection.py  hub.py  writer.py
src/flow_control/: __init__.py
src/ingestion/: stream_buffer.py
src/lib/: stellarProvider.ts
src/middleware/: apiKeyMiddleware.ts  latencyGuardMiddleware.ts  metrics.ts  requestLogger.ts  (+2 more)
test/: lockFreeRingBuffer.test.ts  secure_memory.jest.test.ts
tests/: test_crypto_engine.py  test_http_client_keepalive.py  test_latency_tracker.py  test_math_scaler.py  test_nonce_tracker.py  test_pipeline.py  test_pool_recovery.py  test_rpc_client.py  test_sandbox.py  test_secure_memory_cleanup.py  test_state.py  test_stream_buffer.py  test_writer.py
(+45 files in other folders)
